using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class AnimationConstants
{
    public static class CommonAnimation
    {
        public const string Attacking = "Attacking";
        public const string Idle = "Idle";
        public const string Death = "Death";
        public const string Walking = "Walking";
    }
    public static class CavalryID
    {
        public const string HorseRun = "Run";
    }
}